# mindMapper

./: .gitignore  LICENSE  Readme.md  pyproject.toml
mindMapper/: __init__.py  cli.py  core.py  page.py  processor.py  utils.py  wiki.py
mindMapper/web/: __init__.py  forms.py  routes.py  user.py
mindMapper/web/static/: conceptmapper.js
mindMapper/web/templates/: 404.html  base.html  editor.html  home.html  index.html  page.html  search.html  tag.html  tags.html
notes/: home.md  page-a.md  page-b.md  page-c.md  page-d.md  page-e.md  sourcepage.md  targetpage.md
notes/maps/: subMap.md  testMap.md  theVortex.md
scripts/: installEditableMindMapperCommand  mmJImplementation  mmPneNP  mmjtheory  mmplanning  setupMM
tests/: __init__.py  test_core.py  test_web.py  utils.py
