[project]
name = "mindMapper"
version = "0.0.1"
description = "A tool to help mind map a wicked *web* of ideas...."
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "pyyaml>=6.0",
    'Flask>=0.9',
    'Click>=6',
    'Flask-Login>=0.4',
    'Flask-WTF>=0.8',
    'Markdown>=2.2.0',
    'WTForms>=1.0.2',
    'Werkzeug>=0.8.3',
    'python-markdown-math'
]
requires-python = ">=3.10"
license = {text = "Apache2.0"}

[project.scripts]
mindMapper = "mindMapper.cli:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3",
    "aiofiles>=23.1.0",
    "pytest-mock>=3.10.0",
    "deepdiff>=6.2.3",
    "mock>=5.0.1",
]
